--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/FREERIDER_DB
 spring.datasource.username=freerider
 spring.datasource.password=free.ride
-spring.jpa.hibernate.ddl-auto=update
+
+# (optional) for debugging
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
